[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camjongun"
version = "0.1.2"
description = "Python bindings for the CamJongUn virtual camera SDK"
requires-python = ">=3.9"
license = { text = "GPL-2.0-or-later" }

[tool.setuptools.packages.find]
where = ["src"]
