[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camjongun"
version = "0.1.3"
description = "Python bindings for the CamJongUn virtual camera SDK"
requires-python = ">=3.9"
license = { text = "GPL-2.0-or-later" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
camjongun = [
  "native/*",
  "native/windows/*",
  "native/windows/bin/*",
  "native/macos/*",
  "native/linux/*",
]
